# astro_voice

./: CMakeLists.txt  README.md
cmake/: cpr.cmake  nlohmann.cmake  sherpa-onnx.cmake  ws.cmake
data/: askie_tokens.txt
scripts/: README.md  config.json  generate_keywords.sh
src/: astro_client.cpp  astro_client.hpp  audio_queue.hpp  audio_stream.cpp  audio_stream.hpp  base64.cpp  base64.hpp  config.cpp  config.hpp  kwspotter.cpp  kwspotter.hpp  main.cpp  paraformer.cpp  paraformer.hpp  pipe.cpp  pipe.hpp  player.cpp  player.hpp  sensevoice.cpp  sensevoice.hpp  stt_base.hpp  ts_queue.hpp  tts.cpp  tts.hpp  vad.cpp  vad.hpp  ws_client.cpp  ws_client.hpp  ws_client_factory.cpp  ws_client_factory.hpp  zipformer_stt.cpp  zipformer_stt.hpp
